# void-installer

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  setup.cfg
modules/: keyboard.py  locale.py  mycoolmodule.py  user_account.py
void_installer/: __info__.py  __init__.py  __main__.py  config.py  installer.py  interface.py  module.py  xbps.py
void_installer/util/: __init__.py  cmd.py  utils.py  xbps.py
