[metadata]
name = void-installer
version = attr: void_installer.__version__
description = Void Linux installer
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 2-Clause
license_files = LICENSE
url = https://github.com/classabbyamp/void-installer
author = classabbyamp
author_email = void@placeviolette.net
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration

[options]
packages = void_installer
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    void-installer = void_installer.__main__:main
